policies/operators/servicemesh/controlplane/namespace-collector.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-collector
  labels:
    istio-discovery: enabled
    istio-injection: enabled
