policies/operators/servicemesh/controlplane/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-discovery: enabled
